feat: criaçao das funcionalidades de censo