@@ -46,7 +46,7 @@ public class ExameController {
         List<String> permissoes = authentication.getAuthorities()
                 .stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
         return !permissoes.contains("VISUALIZAR");
     }
